--- a/about.html
+++ b/about.html
@@ -11,4 +11,9 @@ title: "About"
        Used to work at a <a href="http://gs.com"> company</a> that everyone loves to hate and have an overrated degree from <a href="http://en.wikipedia.org/wiki/New_York_University_Stern_School_of_Business"> here</a>. 
        Lets get in touch on : <a href="https://twitter.com/{{ site.twitter }}" target="_blank"><i class="icon icon-twitter"></i></a> or via :<a href="mailto:vamseejasti@**REMOVEME**me.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon-envelope"></i></a>
       </p>
+
+
+  <p> Big thanks to <a href ="https://github.com/holman/left">@holman</a> for open sourcing this jekyll theme and allowing me to steal it!</p>
+
+
 </section>
