Blog post( yes, literally) & other nifty fixes

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,19 @@ title: "Project"
 
 <section class="content">
 <h1>{{ site.blog_name }} </h1>
+
+
+<h2>Stout</h2>
+
+<p> A stripped out Jekyll template of my site which allows anyone to fork, clone, customize and host their own blogging site on Github.</p>
+
+You can find the source to the project  <a href ="https://github.com/jasti/stout">here</a> or choose to read about it <a href ="http://vamseejasti.com/posts/Blog">here</a>.
+<center>
+<img src="/images/projects/homeshot.png"/>
+</center>
+<hr>
+
+
 <h2>Stock Predictor</h2>
 
 <p>A project written in python that listens on Reuters via a twitter handle and screens the articles for positively or negatively correlated news for stocks you are interested in. Based on the sentiment analysis of the news article, the program will suggest to take a direction on the stock. </p>
@@ -12,7 +25,7 @@ title: "Project"
 For example, if Reuters publishes a leak about Apple launching the iWatch and what a huge success it will become, the app will calculate a positive sentiment and mark it closer to 1. Depending on the exact sentiment score, the app will recommend buying a large number of stocks when the number gets closer to 1 and the app will recommend selling the stocks when the sentiment score is closer to 0. i.e shorting the stock.
 </p>
 
-You can find the project  <a href ="https://github.com/jasti/Stock-Predictor">here</a>.  
+You can find the source to the project  <a href ="https://github.com/jasti/Stock-Predictor">here</a>.  
 <hr>
 
 </section>
