--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ title: "About"
       </p>
 
 
-  <p> Big thanks to <a href ="https://github.com/holman/left">@holman</a> for open sourcing this jekyll theme and allowing me to steal it!</p>
+  <p> Big thanks to <a href ="https://github.com/holman/left">@holman</a> for open sourcing this jekyll theme and allowing me to steal and make modifications to it. I have open sourced a bare bones template of this template. You can read more about it <a href ="http://vamseejasti.com/posts/blog/">here</a>.
 
 
 </section>
