add site description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: "Posts"
 
 <section class="content">
  <h1>{{ site.blog_name }} </h1>
+  <h4>{{ site.description }} </h4>
   <ul class="listing">
     {% for post in site.posts %}
     <li>
