introduce a book section

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@ title: "Project"
 
 <section class="content">
 <h1>{{ site.blog_name }} </h1>
-
+<h4> A list of my favorite side projects </h4>
 
 <h2>Stout</h2>
 
@@ -15,7 +15,7 @@ You can find the source to the project  <a href ="https://github.com/jasti/stout
 <center>
 <img src="/images/projects/homeshot.png"/>
 </center>
-<hr>
+<hr width="100"> 
 
 
 <h2>Stock Predictor</h2>
@@ -26,6 +26,6 @@ For example, if Reuters publishes a leak about Apple launching the iWatch and wh
 </p>
 
 You can find the source to the project  <a href ="https://github.com/jasti/Stock-Predictor">here</a>.  
-<hr>
+<hr width="100"> 
 
 </section>
