Web scraping post

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,18 @@ title: "Project"
 <h1>{{ site.blog_name }} </h1>
 <h4> A list of my favorite side projects </h4>
 
+<h2>Crossfit Scraper</h2>
+<p>A Python parser that iteratively scrapes the WODs on Crossfit.com since 2002 and saves them to a tab separated file. Uses BeautifulSoup and Pandas. <br>
+
+Find the source for this on my <a href ="https://github.com/jasti/CrossfitScraper">Github account</a>. <br>
+Find an IPython notebook with the code <a href="https://github.com/jasti/CrossfitScraper/blob/master/NBCrossfitScraper.ipynb">here</a>.<br>
+
+Details in a post<a href="http://vamseejasti.com/posts/scraping"> here</a>.
+</p>
+<hr width="100"> 
+
+
+
 <h2>Stout</h2>
 
 <p> A stripped out Jekyll template of my site which allows anyone to fork, clone, customize and host their own blogging site on Github.</p>
