--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ title: "About"
        Lets get in touch on : <a href="https://twitter.com/{{ site.twitter }}" target="_blank"> <i class="icon icon-twitter"></i> </a> or via :<a href=“mailto:vamseej@gmail.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon-envelope"></i> </a>
   </p>
 
-  <p>Some of my posts are fairly technical, but I try and write for an audience who has taken at least one computer science class in their life. Feedback welcome.
+  <p>Some of my posts are fairly technical, but I try and write for an audience who has taken at least one computer science class in their life. Feedback always appreciated.
   </p> 
   <p>I have open sourced a bare bones template of this blog if you want to use it. You can read more about it <a href ="http://vamseejasti.com/posts/blog/">here</a>.
 
