Change some titles

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,24 @@ title: "Project"
 <h1>{{ site.blog_name }} </h1>
 <h4> A list of my favorite side projects </h4>
 
+
+<h2>Stock Portfolio Viewer</h2>
+<p>A C# Windows thick client that is useful for monitoring your own portfolio holdings. Simply edit the portfolio.xml file with the stocks you hold and the initial price you bought them at and run the solution. Real time equity data price feed from Yahoo has been implemented and also other performance ( Daily and Cost Basis) oriented metrics associated with your portfolio.
+
+Makes it easier to just have this app open if you are on windows, instead of having to open a web browser each time you want to check your stock performance.
+
+<br>
+The UI is not exactly a piece of art, but gets the job done!
+<center>
+<img src="/images/projects/screenshot.png"/>
+</center>
+
+Find the source <a href ="https://github.com/jasti/CrossfitScraper">here</a>. <br>
+
+</p>
+<hr width="100"> 
+
+
 <h2>Crossfit Scraper</h2>
 <p>A Python parser that iteratively scrapes the WODs on Crossfit.com since 2002 and saves them to a tab separated file. Uses BeautifulSoup and Pandas. <br>
 
