--- a/books.html
+++ b/books.html
@@ -6,6 +6,19 @@ title: "Books"
 <h1>{{ site.blog_name }} </h1>
 <h4> Books i have been reading since Mar 2014. <a href ="http://en.wikipedia.org/wiki/MoSCoW_method">MoSCoW</a> ratings. Recommendations welcome. </h4>
 
+<h3> <b> May, 2014 </b></h3>
+
+<h3>Rework | Jason Fried & David HH  </h3>
+<center><a href="http://www.amazon.com/Rework-Jason-Fried/dp/0307463745"><img src="/images/books/rework.jpg"> </a></center>
+<p>
+Rarely a book comes along that is simple, yet so powerful. The creators of Basecamp talk about their thoughts on how a business should be run. It is rather unconventional, but feels completely obvious after you have digested it. It is a quick and easy read but packs a punch, just the way books should be. Recommend it to any entrepreneur, manager or anyone who is curious about running a business or a team with a new set of rules.
+</p>
+<br>
+<br>
+<b>Rating : MUST </b>
+<hr width="100"> 
+
+
 
 <h3> <b> Apr, 2014 </b></h3>
 
