Writing that works review

--- a/books.html
+++ b/books.html
@@ -8,6 +8,19 @@ title: "Books"
 
 <h3> <b> May, 2014 </b></h3>
 
+
+
+<h3>Writing that works | Kenneth Roman & Joel Raphaelson </h3>
+<center><a href="http://www.amazon.com/Writing-Works-Communicate-Effectively-Business/dp/0060956437"><img src="/images/books/writing.jpg"> </a></center>
+<p>
+Apparently this is classic, but I didn't come across this book until recently. You make your money's worth just by reading chapter 2. The authors describe effective principles for clear and concise writing. The book focuses on business writing instead of creative writing. It is especially useful if you are a non-native english speaker. I hope I had it before I joined my first job. Could have avoided all those embarrassingly long emails. Must read! 
+</p>
+<br>
+<br>
+<b>Rating : MUST </b>
+<hr width="100"> 
+
+
 <h3>Rework | Jason Fried & David HH  </h3>
 <center><a href="http://www.amazon.com/Rework-Jason-Fried/dp/0307463745"><img src="/images/books/rework.jpg"> </a></center>
 <p>
