--- a/about.html
+++ b/about.html
@@ -7,9 +7,13 @@ title: "About"
   <h1>{{ site.blog_name }}</h1>
 
   <p>
-       I like Crossfit, traveling, drinking draft beer and working on side projects. I like side projects so much that I could do my side projects as a main project. 
+       I like CrossFit, traveling, drinking draft beer and working on side projects. I like side projects so much that I could do my side projects as a main project. 
        Used to work at a <a href="http://gs.com"> company</a> that everyone loves to hate and have an overrated degree from <a href="http://en.wikipedia.org/wiki/New_York_University_Stern_School_of_Business"> here</a>. 
        Lets get in touch on : <a href="https://twitter.com/{{ site.twitter }}" target="_blank"> <i class="icon icon-twitter"></i> </a> or via :<a href="mailto:vamseej@gmail.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon icon-envelope"></i></a>
+  </p>
+
+  <p>
+  	I am also a certified CrossFit Level 1 Trainer and conduct free classes in my building gym and the riverside park (with minimal equipment) from time to time. So if you are in New York and willing to swing by to the Upper West Side, hit me up!
   </p>
 
   <p>Some of my posts are fairly technical, but I try and write for an audience who has taken at least one computer science class in their life. Feedback always appreciated.
