--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ title: "About"
   </p>
 
   <p>
-  	I am also a certified CrossFit Level 1 Trainer and conduct free classes in my building gym or the Riverside park (with minimal equipment) from time to time. So if you are in New York and willing to swing by to the Upper West Side, hit me up!
+  	I am also a certified CrossFit Level 1 Trainer and conduct free training sessions in my building gym or the Riverside Park (with minimal equipment) from time to time. So if you are in New York and willing to swing by to the Upper West Side, hit me up!
   </p>
 
   <p>Some of my posts are fairly technical, but I try and write for an audience who has taken at least one computer science class in their life. Feedback always appreciated.
