--- a/books.html
+++ b/books.html
@@ -13,7 +13,7 @@ title: "Books"
 <h3>Writing that works | Kenneth Roman & Joel Raphaelson </h3>
 <center><a href="http://www.amazon.com/Writing-Works-Communicate-Effectively-Business/dp/0060956437"><img src="/images/books/writing.jpg"> </a></center>
 <p>
-Apparently this is classic, but I didn't come across this book until recently. You make your money's worth just by reading chapter 2. The authors describe effective principles for clear and concise writing. The book focuses on business writing instead of creative writing. It is especially useful if you are a non-native english speaker. I hope I had it before I joined my first job. Could have avoided all those embarrassingly long emails. Must read! 
+Apparently this is classic, but I didn't come across this book until recently. You make your money's worth just by reading chapter 2. The authors describe effective principles for clear and concise writing. The book focuses on business writing instead of creative writing. It is especially useful if you are a non-native english speaker. I wish I had read it before I joined my first job. Could have avoided all those embarrassingly long emails. A must read! 
 </p>
 <br>
 <br>
@@ -38,7 +38,7 @@ Rarely a book comes along that is simple, yet so powerful. The creators of Basec
 <h3>Visualize This | Nathan Yau </h3>
 <center><a href="http://www.amazon.com/Visualize-This-FlowingData-Visualization-Statistics-ebook/dp/B005CCT19M/"><img src="/images/books/visualize-this.png"> </a></center>
 <p>
-It was a course reading for one of my data science classes in my MBA but i went back and re-read it. More than half of the book is covered with code and i skipped over it because your actual implementation is usually fairly restrictive in terms of choices in reality. However, the book does an excellent job of giving a broad idea about all the visulaizations possible and a broad overview of industry grade tools. Visualization is a relatively new subject and this book gives you a good grounding if you ever plan on working with visualizations.
+It was a course reading for one of my data science classes in my MBA, but I went back and re-read it. More than half of the book is covered with code and I skipped over it because your actual implementation is usually fairly restrictive in terms of choices in reality. However, the book does an excellent job of giving a broad idea about all the visulaizations possible and a broad overview of industry grade tools. Visualization is a relatively new subject and this book gives you a good grounding if you ever plan on working with visualizations.
 </p>
 <br>
 <br>
