--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: "About"
   <h1>{{ site.blog_name }}</h1>
 
   <p>
-       I like CrossFit, traveling, drinking draft beer and working on side projects. I like side projects so much that I could do my side projects as a main project. 
+       I like traveling, drinking draft beer, CrossFit and working on side projects. I like side projects so much that I could do my side projects as a main project. 
        Used to work at a <a href="http://gs.com"> company</a> that everyone loves to hate and have an overrated degree from <a href="http://en.wikipedia.org/wiki/New_York_University_Stern_School_of_Business"> here</a>. 
        Lets get in touch on : <a href="https://twitter.com/{{ site.twitter }}" target="_blank"> <i class="icon icon-twitter"></i> </a> or via :<a href="mailto:vamseej@gmail.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon icon-envelope"></i></a>
   </p>
