--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ title: "Posts"
   <ul class="listing">
     {% for post in site.posts %}
     <li>
-      <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+      <h3><span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a></h3>
+      <div class = no-mobile><br/><small>{{ post.excerpt }} <a href = "{{post.url}}">Read More...</a></small></div>
     </li>
     {% endfor %}
   </ul>
