fix broken links

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@ Details in a post<a href="http://vamseejasti.com/posts/scraping"> here</a>.
 
 <p> A stripped out Jekyll template of my site which allows anyone to fork, clone, customize and host their own blogging site on Github.</p>
 
-You can find the source to the project  <a href ="https://github.com/jasti/stout">here</a> or choose to read about it <a href ="http://vamseejasti.com/posts/Blog">here</a>.
+You can find the source to the project  <a href ="https://github.com/jasti/stout">here</a> or choose to read about it <a href ="http://vamseejasti.com/posts/blog">here</a>.
 <center>
 <img src="/images/projects/homeshot.png"/>
 </center>
