--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: "Posts"
     {% for post in site.posts %}
     <li>
       <h4><span>{{ post.date | date: "%B %e, %Y" }}</span> </h4> <h3> <a href="{{ post.url }}">{{ post.title }}</a></h3>
-      <div id = "no-mobile"><br/><small>{{ post.excerpt }} <a href = "{{post.url}}">Read More...</a></small></div>
+     <!-- <div id = "no-mobile"><br/><small>{{ post.excerpt }} <a href = "{{post.url}}">Read More...</a></small></div> -->
     </li>
     {% endfor %}
   </ul>
