update books for jun & jul

--- a/books.html
+++ b/books.html
@@ -6,6 +6,49 @@ title: "Books"
 <h1>{{ site.blog_name }} </h1>
 <h4> Books i have been reading since Mar 2014. <a href ="http://en.wikipedia.org/wiki/MoSCoW_method">MoSCoW</a> ratings. Recommendations welcome. </h4>
 
+<h3> <b> Jul, 2014 </b></h3>
+
+
+
+<h3>What I talk about when I talk about running | Haruki Murakami </h3>
+<center><a href="http://www.amazon.com/What-About-Running-Vintage-International/dp/0307389839"><img src="/images/books/running.jpg"> </a></center>
+<p>
+From time to time, I like to re-read books that I enjoyed very much. I borrowed this book from a friend when we were on a surf-cation in Virginia Beach for 4th of July, 2 years ago. I am going back again this year and I remembered how much I enjoyed the book the first time I read it. Reading it after running a marathon gives a completely different perspective on Murakami's part memoir on running. He has a simple way of capturing mundane day-to-day thoughts and lays them down in a delightful manner. Quite honestly, I don't enjoy his fiction work because I find it quite cuckoo and aimless - at least in this point in my life. This book still has the attention to detail that all of Murakami's books have, but this book also offers a certain depth into his character and way of thinking. He does a great job of beautifully immersing his "life lessons" into the prose, in a simple and approachable way. I wish more authors wrote more about themselves and their approach to writing and living because they have such a talent for expression that most others, albeit successful, don't.  
+</p>
+<br>
+<br>
+<b>Rating : MUST </b>
+<hr width="100"> 
+
+<h3> <b> Jun, 2014 </b></h3>
+
+   
+<h3>Mortality | Christopher Hitchens   </h3>
+<center><a href="http://www.amazon.com/Mortality-Christopher-Hitchens/dp/1455502758"><img src="/images/books/mortality.jpg"> </a></center>
+<p>
+“It is better to burn down than fade away”. Christopher Hitchens didn’t say that, it was Kurt Kobain. I don’t know if dying young makes one legendary or vice-versa. Hitchens wrote this book after he was diagnosed with cancer. It’s a short read and those who know Hitchens know that his books are anything but short. He didn’t change his writing style, just that reality struck in the middle of writing this book. Possibly the most outspoken atheist next to Richard Dawkins, gives his views on how he faced cancer and faced his fast approaching, inevitable, death.
+</p>
+<br>
+<br>
+<b>Rating : MUST </b>
+<hr width="100"> 
+
+
+
+
+<h3>Getting Real | Jason Fried & David HH   </h3>
+<center><a href="http://www.amazon.com/Getting-Real-Smarter-Successful-Application/dp/0578012812"><img src="/images/books/getting-real.jpg"> </a></center>
+<p>
+The authors nailed it with the title of the book. After this short read, you start to notice the unbelievable amount of bureaucratic bullshit that modern day employees go through.  The meetings, large volume of emails, year long estimates, strict timelines, technical jargon are all things we get used to after spending some time at a large company. This book does a great job at cutting out the unnecessary and getting real to focus on what truly matters - building a great product that everyone loves. True and tried practical tips that the founders of Basecamp have found over the years. Jason and DHH have an old school mentality when it comes to running a business. To give you a flavor – they insist on not growing a business too much – asking us to consider what the point of rapidly expanding a company size except for boosting one’s ego. (No, economies of scale don’t count in the software space). The book lays out a common sense way of running a business. You realize how uncommon common sense is these days in large tech companies. Great read. Will definitely go back from time to time.
+</p>
+<br>
+<br>
+<b>Rating : MUST </b>
+<hr width="100"> 
+
+
+
+
 <h3> <b> May, 2014 </b></h3>
 
 
