--- a/books.html
+++ b/books.html
@@ -4,7 +4,7 @@ title: "Books"
 ---
 <section class="content">
 <h1>{{ site.blog_name }} </h1>
-<h4> Books I have been reading since Mar 2014. <a href ="http://en.wikipedia.org/wiki/MoSCoW_method">MoSCoW</a> ratings. Recommendations welcome. </h4>
+<h4> Books I have been reading since Mar 2014. Recommendations welcome. </h4>
 
 <h3> <b> Jul, 2014 </b></h3>
 
@@ -16,8 +16,7 @@ title: "Books"
 From time to time, I like to re-read books that I enjoyed very much. I borrowed this book from a friend when we were on a surf-cation in Virginia Beach for 4th of July, 2 years ago. I am going back again this year and I remembered how much I enjoyed the book the first time I read it. Reading it after running a marathon gives a completely different perspective on Murakami's part memoir on running. He has a simple way of capturing mundane day-to-day thoughts and lays them down in a delightful manner. Quite honestly, I don't enjoy his fiction work because I find it quite cuckoo and aimless - at least in this point in my life. This book still has the attention to detail that all of Murakami's books have, but this book also offers a certain depth into his character and way of thinking. He does a great job of beautifully immersing his "life lessons" into the prose, in a simple and approachable way. I wish more authors wrote more about themselves and their approach to writing and living because they have such a talent for expression that most others, albeit successful, don't.  
 </p>
 <br>
-<br>
-<b>Rating : MUST </b>
+
 <hr width="100"> 
 
 <h3> <b> Jun, 2014 </b></h3>
@@ -30,7 +29,6 @@ From time to time, I like to re-read books that I enjoyed very much. I borrowed 
 </p>
 <br>
 <br>
-<b>Rating : MUST </b>
 <hr width="100"> 
 
 
@@ -43,7 +41,6 @@ The authors nailed it with the title of the book. After this short read, you sta
 </p>
 <br>
 <br>
-<b>Rating : MUST </b>
 <hr width="100"> 
 
 
@@ -60,7 +57,6 @@ Apparently this is classic, but I didn't come across this book until recently. Y
 </p>
 <br>
 <br>
-<b>Rating : MUST </b>
 <hr width="100"> 
 
 
@@ -71,7 +67,6 @@ Rarely a book comes along that is simple, yet so powerful. The creators of Basec
 </p>
 <br>
 <br>
-<b>Rating : MUST </b>
 <hr width="100"> 
 
 
@@ -84,8 +79,7 @@ Rarely a book comes along that is simple, yet so powerful. The creators of Basec
 It was a course reading for one of my data science classes in my MBA, but I went back and re-read it. More than half of the book is covered with code and I skipped over it because your actual implementation is usually fairly restrictive in terms of choices in reality. However, the book does an excellent job of giving a broad idea about all the visulaizations possible and a broad overview of industry grade tools. Visualization is a relatively new subject and this book gives you a good grounding if you ever plan on working with visualizations.
 </p>
 <br>
-<br>
-<b>Rating : SHOULD </b>
+
 <hr width="100"> 
 
 
@@ -98,8 +92,7 @@ It was a course reading for one of my data science classes in my MBA, but I went
 Quintessential Hitchens. Brash, witty, condescending yet spacious observations on subjects that have been near and dear to him over the decades. Most people who have read Hitchens have polar feelings. You will either idolize or detest him. This book is no different. There are a lot of times that Hitchens assumes that the people reading his books know as much about subjects as he does and that's why he is a great writer's writer but for mere mortals like me, it takes a bit of brain massaging to get through. 
 </p>
 <br>
-<br>
-<b>Rating : SHOULD </b>
+
 <hr width="100"> 
 
 
@@ -109,8 +102,7 @@ Quintessential Hitchens. Brash, witty, condescending yet spacious observations o
 If you can get past beyond the corny title of the book, the material is discussed in a very intellectual tone and is quite inspiring. This is one of the best, if not the best, book on spiritualism I have come across. Matthieu lays out the Buddhist philosophy of training your mind to be happy in a very digestible manner directed at a modern audience. 
 </p>
 <br>
-<br>
-<b>Rating : MUST </b>
+
 <hr width="100"> 
 
 
