--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,23 @@ title: "Project"
 <h1>{{ site.blog_name }} </h1>
 <h4> A list of my favorite side projects </h4>
 
+<h2>Data Analysis Of Crossfit.com Workouts</h2>
+<p>
+Written in Python, uses <a href="https://github.com/jasti/CrossfitScraper">scrapped data</a> from the crossfit.com website(from year 2002 to 2013) to perform analysis exploratory data analsis. Uses Pandas for data munging google refine for data manupulation and matplotlib for plotting.  
+
+
+<br>
+
+<center>
+<img src="/images/projects/crossfit.png"/>
+</center>
+
+
+
+You can find the source to the project  <a href ="https://github.com/jasti/CrossfitAnalyser">here</a> or choose to read about it <a href ="http://vamseejasti.com/posts/analysis/">here</a>.
+</p>
+<hr width="100"> 
+
 
 <h2>Stock Portfolio Viewer</h2>
 <p>A C# Windows thick client that is useful for monitoring your own portfolio holdings. Simply edit the portfolio.xml file with the stocks you hold and the initial price you bought them at and run the solution. Real time equity data price feed from Yahoo has been implemented and also other performance ( Daily and Cost Basis) oriented metrics associated with your portfolio.
