--- a/wedding.html
+++ b/wedding.html
@@ -50,7 +50,7 @@ Candi and Rick Tipton's house is at <a href = "http://goo.gl/qKBYwF">this</a> lo
 Candi and Rick Tipton's house phone number - 760-436-5816
 </p>
 
-<h3>Sunday Morning <h3>
+<h3>Sunday Morning </h3>
 <p>
 We will be at <a href = "http://goo.gl/ZUkuY0">Lofty coffee</a> from 10:30 AM to 11:30 AM on Sunday morning. If you are around, common down to say hi!
 </p>
