--- a/wedding.html
+++ b/wedding.html
@@ -18,16 +18,16 @@ It is casual. Please wear whatever you will find comfortable. For reference, Kri
 <p>
 
 The wedding will be held at the Moonlight beach lookout. It is a small grassy park which overlooks the beach and the ocean. (So ladies, heels are OK). If you search for Moonlight beach on Google Maps, it should show an image similar to below. The <a href = "http://goo.gl/Fxo0JR">wedding </a> and <a href = "">reception</a> location are marked in the image.
-Also, there will be no chairs and we will be standing during the short wedding ceremony. Please feel free to bring your own chair, if you would like to sit. 
+Also, there will be no chairs and we will be standing during the short wedding ceremony. Please feel free to bring your own chair, if you would like to sit. <br>
 
 Wedding location: <a href = "http://goo.gl/Fxo0JR">Google Maps link </a> <br>
-Reception location: <a href = "http://goo.gl/kR4qnT"> Google Maps link </a> <br>
+Reception location: <a href = "http://goo.gl/kR4qnT">Google Maps link </a> <br>
 
 <center>
 <img src="/images/wedding/location.png"/>
 </center>
 
-<p>
+</p>
 
 <h3>Wedding & Reception Time</h3>
 <p>
