--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@ title: "Project"
 
 <h2>Data Analysis Of Crossfit.com Workouts</h2>
 <p>
-Written in Python, uses <a href="https://github.com/jasti/CrossfitScraper">scrapped data</a> from the crossfit.com website(from year 2002 to 2013) to perform analysis exploratory data analsis. Uses Pandas for data munging google refine for data manupulation and matplotlib for plotting.  
+Written in Python, uses <a href="https://github.com/jasti/CrossfitScraper">scrapped data</a> from the crossfit.com website(from year 2002 to 2013) to perform exploratory data analsis. Uses Pandas for data munging. Google Refine for data manipulation and matplotlib for plotting.  
 
 
 <br>
