--- a/about.html
+++ b/about.html
@@ -5,10 +5,17 @@ title: "About"
 
 <section class="content">
   <h1>{{ site.blog_name }}</h1>
-
+  <h4> A little section about me and this blog </h4>
   <p>
-       I like traveling, drinking draft beer, CrossFit and working on side projects. I like side projects so much that I could do my side projects as a main project. 
-       Used to work at a <a href="http://gs.com"> company</a> that everyone loves to hate and have an overrated degree from <a href="http://en.wikipedia.org/wiki/New_York_University_Stern_School_of_Business"> here</a>. 
+  <center><img src="/images/aboutMePic.jpg"/></center> 
+  </p>
+
+  <p><i> Goa, India 2014 </i></p>
+  <p>
+    Welcome! Thanks for stopping by.
+    <br>
+    I like traveling, drinking draft beer, CrossFit and working on side projects. I like side projects so much that I could do my side projects as a main project. 
+    Used to work at a <a href="http://gs.com"> company</a> that everyone loves to hate and have an overrated degree from <a href="http://en.wikipedia.org/wiki/New_York_University_Stern_School_of_Business"> here</a>. 
       
   </p>
 
@@ -16,11 +23,13 @@ title: "About"
   	I am also a certified CrossFit Level 1 Trainer and conduct free training sessions in my building gym or the Riverside Park (with minimal equipment) from time to time. So if you are in New York and willing to swing by to the Upper West Side, hit me up!
   </p>
 
-  <p>Some of my posts are fairly technical, but I try and write for an audience who has taken at least one computer science class in their life. Feedback always appreciated.
+  <p>
+    I like to write about a diverse set of topics. Observations, technology trends, data-driven experiments, hacks and travels. Some of my posts are fairly technical, but I try and write for an audience who has taken at least one computer science class in their life. Feedback always appreciated. A quick note on gender. I often use the term 'he' as a convenience. Please feel free to <i>':%s/he/she/g'</i>. My apologies if this bothers you. 
   </p> 
   <p>I have open sourced a bare bones template of this blog if you want to use it. You can read more about it <a href ="http://vamseejasti.com/posts/blog/">here</a>.
-
+   
 Lets get in touch on : <a href="https://twitter.com/{{ site.twitter }}" target="_blank"> <i class="icon icon-twitter"></i> </a> or via :<a href="mailto:vamseej@gmail.com?Subject=Hi%20from%20the%20blog" target="_top"><i class="icon icon-envelope"></i></a>
+ </p>
 
 
 </section>
