--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: "About"
 
 <section class="content">
   <h1>{{ site.blog_name }}</h1>
-  <h4> A little section about me and this blog </h4>
+  <h4> A little about me and this blog </h4>
   <p>
   <center><img src="/images/aboutMePic.jpg"/></center> 
   </p>
