--- a/about.html
+++ b/about.html
@@ -7,10 +7,9 @@ title: "About"
   <h1>{{ site.blog_name }}</h1>
   <h4> A little about me and this blog </h4>
   <p>
-  <center><img src="/images/aboutMePic.jpg"/></center> 
+  <center><img src="/images/AboutMe.jpg"/></center> 
   </p>
 
-  <p><i> Goa, India 2014 </i></p>
   <p>
     Welcome! Thanks for stopping by.
     <br>
