--- a/about.html
+++ b/about.html
@@ -11,15 +11,14 @@ title: "About"
   </p>
 
   <p>
-    Welcome! Thanks for stopping by.
-    <br>
-    I like traveling, drinking draft beer, CrossFit and working on side projects. I like side projects so much that I could do my side projects as a main project. 
-    Used to work at a <a href="http://gs.com"> company</a> that everyone loves to hate and have an overrated degree from <a href="http://en.wikipedia.org/wiki/New_York_University_Stern_School_of_Business"> here</a>. 
-      
+
+    Hello! Welcome to this space. I enjoy travel, draft beer, staying fit and building cool things. 
+    I work as a Technical Account Manager for advertising platforms at <a href="http://google.com">Google</a> and I have an MBA from <a href="http://en.wikipedia.org/wiki/New_York_University_Stern_School_of_Business"> NYU Stern School of Business</a>. 
+    Before joining Google, I used to work at Goldman Sachs as a software developer and Charles River Development as a Technical Implementation Manager for electronic trading platforms.  
   </p>
 
   <p>
-  	I am also a certified CrossFit Level 1 Trainer and conduct free training sessions in my building gym or the Riverside Park (with minimal equipment) from time to time. So if you are in New York and willing to swing by to the Upper West Side, hit me up!
+  	I am also a certified CrossFit Level 1 Trainer and a fitness instructor at Google.
   </p>
 
   <p>
