--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ title: "About"
 
   <p>
 
-    Hey, I'm Vamsee and I work at Google as a Product Manager. All the opinions on this blog are my own, blah blah.
+    Hey, I'm Vamsee. My friends call me J-Dog.... no, nobody calls me that but I don't mind if you do though. I work at Google as a Product Manager. All the opinions on this blog are my own, blah blah.
 
   <p>
     I like to write about a diverse set of things. Ramblings, technology trends, data-driven experiments, hacks and travels.
